--- a/index.html
+++ b/index.html
@@ -10,5 +10,8 @@
     <h1>My first ever website.</h1>
     <p>Felling happy naw.</p>
     <p>I am a ghost.</p>
+    <input type="text">
+    <br>
+    <button>Click me baby!!!</button>
 </body>
 </html>
