--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>My first ever website.</h1>
     <p>Felling happy naw.</p>
-    <p>I am a ghost.</p>
+    <p>I am a lover boy,,,.</p>
     <input type="text">
     <br>
     <button>Click me baby!!!</button>
